For a more verbose changelog, see http://omake.metaprl.org/changelog.html

OMake 0.9.8.1 [03/16/2007]
   - Added a large number of new built-in and standard library functions
   - Extented the autocomfiguration section of the standard library
   - A number of improvements in the interactive osh shell.
   - A number of improvements in the library of standard build recipes
   - Documentation improvements.
   - A number of other improvements and bugfixes.

OMake 0.9.8 [12/11/2006]
   - The conversion from OMake expressions to shell command lines went through
     a major redesign to make it more consistent and less ad-hoc.
   - OMake documentation was significantly reorganized.
   - OCaml build rules: Added experimental improved dependency scanner using
     the upcoming "ocamldep -modules" feature; added support for the Menhir
     parser-generator.
   - Added a number of new options to control OMake's output and verbosity;
     OMake is now more silent by default.
   - Many more improvements and bug fixes.

OMake 0.9.6.9 [04/11/2006]
   - Significantly improved C++ support; minor improvements in OCaml support.
   - Significantly updated the default (sample) OMakefile.
   - Significantly improved the performance of the built-in find command.
   - Several other bug fixes and improvements.
   - A number of documentation fixes and improvements.

OMake 0.9.6.8 [01/23/2006]
  - Fixed a bug in PATH-expansion for pipelines.
  - Improved the handling of the ".PHONY" nodes.
  - Added a remove-project-directories function.
  - Documentation fixes.
  - A few other bugfixes and improvements.

OMake 0.9.6.7 [12/28/2005]
  - Added basic support for C++.
  - Portability improvements.
  - OCaml.om improvements.
  - Minor documentation fixes.
  - A few other bugfixes and improvements.

OMake 0.9.6.6 [11/05/2005]
  - Made sure OMake compiles fine with both OCaml 3.08 and 3.09.
  - A few minor bugfixes and improvements.

OMake 0.9.6.5 [09/14/2005]