@@ -32,6 +32,7 @@
 <h2> OMake Change Log</h2>
 
 <p>Jump to version
+  <a href="#0.9.8.2">0.9.8.2</a>,
   <a href="#0.9.8.1">0.9.8.1</a>,
   <a href="#0.9.8">0.9.8</a>,
   <a href="#0.9.6.9">0.9.6.9</a>,
@@ -48,6 +49,22 @@
   href="http://svn.metaprl.org/viewcvs/*checkout*/mojave/omake-branches/0.9.6.x/CHANGELOG.txt">the
   brief summary change log</a>.
 
+<h3><a name="0.9.8.2">Version 0.9.8.2 (TBA)</a></h3>
+<ul>
+  <li>Consider 3-place rules as implicit. For example, a rule<pre>
+  clean: %:
+     rm -f ...
+</pre>
+   will now be inherited by subdirectories.
+  <li>Allow <tt>.PHONY</tt> sections to have a body. A <tt>.PHONY</tt>
+  declaration with a body would create a default (implicit) rule for the newly
+  created phony target(s).
+  <li>Detect case-insensitive filesystems on Unix-like operating systems
+  (especially important under Mac OS X).
+  <li>A number of performance improvements. In particular, the size of the
+  .omakedb should now be significantly smaller.
+  <li>Documentation improvements
+</ul>
 <h3><a name="0.9.8.1">Version 0.9.8.1 (March 16, 2007)</a></h3>
 <ul>
   <li>Additional &ldquo;autoconfiguration&rdquo; functionality:
