@@ -139,7 +139,7 @@ from left-to-right; each specifies a set of output options.  In general, an uppe
 the option \emph{on}; a lowercase character turns the option \emph{off}.
 
 \begin{description}
-\item[0] Equivalent to \verb+-s --output-only-errors+
+\item[0] Equivalent to \verb+-s --output-only-errors --no-progress+
 
 This option specifies that \verb+omake+ should be as quiet as possible.  If any errors occur
 during the build, the output is delayed until the build terminates.  Output from successful commands
