@@ -133,7 +133,7 @@ ConfMsgFound(found) =
 # \end{doc}
 
 ConfCleanCFLAGS(cflags) =
-    value $(filter-out /WX -Werror -warn-error, $(cflags))
+    value $(filter-out /WX -Werror --warn-error, $(cflags))
 
 TryCompilingC(command, command_suffix, ext, prog, extra) =
     # The command line
