@@ -11,11 +11,9 @@ open configure/Configure
 #
 # \end{doc}
 #
-open build/C
 
 static. =
     SNPRINTF_AVAILABLE = false
     section
-        public.CFLAGS = $(filter-out -Wall --warn-error /WX -Werror, $(CFLAGS))
         SNPRINTF_AVAILABLE = $(VerboseCheckLib $(EMPTY), snprintf)
         export SNPRINTF_AVAILABLE
