@@ -1,5 +1,12 @@
 For a more verbose changelog, see http://omake.metaprl.org/changelog.html
 
+OMake 0.9.8.2 [TBA]
+   - Made it easy to define default ("implicit") rules for phony targets.
+   - Detect case-insensitive filesystems on Unix-like operating systems
+     (especially important under Mac OS X).
+   - A number of performance improvements.
+   - Documentation improvements.
+
 OMake 0.9.8.1 [03/16/2007]
    - Added a large number of new built-in and standard library functions
    - Extented the autocomfiguration section of the standard library
